--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 Welcome!!
         </h1>
         <div class = "leftdiv">
+            <img src="img4.jpg" alt="Cybersecurity" widht="80px" height="350px" style="float:right ">
             <p>Welcome to the Cybersecurity Club! Our club is dedicated to promoting awareness and education about cybersecurity, as well as providing a community for those interested in this important field.</p>
             <p>As technology continues to advance, cybersecurity has become an essential aspect of our daily lives. From protecting our personal information to safeguarding critical infrastructure, the importance of cybersecurity cannot be overstated. Our club aims to help members learn more about cybersecurity and how to protect themselves and their communities from potential threats.</p>
             <p>Throughout the year, we will be hosting a variety of events, including workshops, guest speaker presentations, and hands-on learning opportunities. Members will have the chance to engage with cybersecurity professionals and industry leaders, as well as fellow enthusiasts who share their passion for this field.</p>
             <p>Whether you are a seasoned cybersecurity professional or just starting out, our club welcomes anyone who is interested in learning more about cybersecurity. We encourage all members to actively participate and share their knowledge and experiences, as we believe that we can all learn from each other and contribute to a stronger, more secure digital world.</p>
             <p>Join us and be a part of a community dedicated to making a positive impact in the world of cybersecurity!</p>
         </div>
-        <img src="img4.jpg" alt="Cybersecurity" width="30%" height=386px>
     </section>
     <section>
         <h2 style="padding-top: 20px;">
